--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.0",
     "@capacitor/core": "2.4.7",
     "@ionic-native/geolocation": "^5.33.0",
+    "@ionic-native/google-maps": "^5.5.0",
     "@ionic/angular": "^5.5.2",
     "cordova-plugin-geolocation": "^4.1.0",
     "rxjs": "~6.6.0",
@@ -39,6 +40,7 @@
     "@angular/language-service": "~11.2.0",
     "@capacitor/cli": "2.4.7",
     "@ionic/angular-toolkit": "^3.1.1",
+    "@types/google.maps": "^3.44.6",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
