Conexão com API

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -3,5 +3,11 @@
   "integrations": {
     "capacitor": {}
   },
-  "type": "angular"
+  "type": "angular",
+  "proxies": [
+    {
+      "path": "http://localhost:8100",
+      "proxyUrl": "https://maps.googleapis.com"
+    }
+  ]
 }
